--- a/FlaskServer/templates/html.html
+++ b/FlaskServer/templates/html.html
@@ -11,8 +11,8 @@
 
 <script type="text/javascript" src="{{url_for('static', filename = 'script.js')}}"></script>
 
-<label for="fname" >Resolution (value between 0.0 and 1.0)</label><br>
+<label for="fname" >Threshold (value between 0.0 and 1.0)</label><br>
 <input type="text" id="val" name="fname" value="0.1"><br>
 <label for="lname">Date</label><br>
 <input type="date" id="date">  <br><br>
-<button type="button" name="button" onclick="LoadDoc()">Click</button>
+<button type="button" name="button" onclick="LoadDoc()">Query</button>
